// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiPageBody is rendered 1`] = `
<main
  aria-label="aria-label"
  class="wuiPageBody testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`WuiPageBody restrict width can be set to a custom number 1`] = `
<main
  aria-label="aria-label"
  class="wuiPageBody wuiPageBody--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:1024px"
/>
`;

exports[`WuiPageBody restrict width can be set to a custom value and measurement 1`] = `
<main
  aria-label="aria-label"
  class="wuiPageBody wuiPageBody--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:24rem"
/>
`;

exports[`WuiPageBody restrict width can be set to a default 1`] = `
<main
  aria-label="aria-label"
  class="wuiPageBody wuiPageBody--restrictWidth-default testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
